// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yarnlock-dedupe v1 next.js.lock fixDuplicates 1`] = `1`;

exports[`yarnlock-dedupe v1 next.js.lock listDuplicates 1`] = `
Array [
  "Package \\"@babel/code-frame\\" wants ^7.0.0 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/code-frame\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/code-frame\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/code-frame\\" wants ^7.12.13 and could get 7.14.5, but got 7.12.13",
  "Package \\"@babel/compat-data\\" wants ^7.12.5 and could get 7.14.5, but got 7.12.7",
  "Package \\"@babel/compat-data\\" wants ^7.12.7 and could get 7.14.5, but got 7.12.7",
  "Package \\"@babel/core\\" wants ^7.1.0 and could get 7.14.6, but got 7.12.10",
  "Package \\"@babel/core\\" wants ^7.1.6 and could get 7.14.6, but got 7.12.10",
  "Package \\"@babel/core\\" wants ^7.12.10 and could get 7.14.6, but got 7.12.10",
  "Package \\"@babel/core\\" wants ^7.7.5 and could get 7.14.6, but got 7.12.10",
  "Package \\"@babel/generator\\" wants ^7.12.10 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/generator\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/generator\\" wants ^7.13.0 and could get 7.14.5, but got 7.13.9",
  "Package \\"@babel/generator\\" wants ^7.7.2 and could get 7.14.5, but got 7.13.9",
  "Package \\"@babel/helper-annotate-as-pure\\" wants ^7.0.0 and could get 7.14.5, but got 7.12.10",
  "Package \\"@babel/helper-annotate-as-pure\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.10",
  "Package \\"@babel/helper-annotate-as-pure\\" wants ^7.12.10 and could get 7.14.5, but got 7.12.10",
  "Package \\"@babel/helper-builder-binary-assignment-operator-visitor\\" wants ^7.10.4 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helper-compilation-targets\\" wants ^7.12.5 and could get 7.14.5, but got 7.12.5",
  "Package \\"@babel/helper-create-class-features-plugin\\" wants ^7.12.1 and could get 7.14.6, but got 7.12.1",
  "Package \\"@babel/helper-create-regexp-features-plugin\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/helper-explode-assignable-expression\\" wants ^7.10.4 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helper-function-name\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-function-name\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-function-name\\" wants ^7.12.13 and could get 7.14.5, but got 7.12.13",
  "Package \\"@babel/helper-get-function-arity\\" wants ^7.12.10 and could get 7.14.5, but got 7.12.10",
  "Package \\"@babel/helper-get-function-arity\\" wants ^7.12.13 and could get 7.14.5, but got 7.12.13",
  "Package \\"@babel/helper-hoist-variables\\" wants ^7.10.4 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helper-member-expression-to-functions\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/helper-module-imports\\" wants ^7.0.0 and could get 7.14.5, but got 7.12.5",
  "Package \\"@babel/helper-module-imports\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.5",
  "Package \\"@babel/helper-module-imports\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.5",
  "Package \\"@babel/helper-module-imports\\" wants ^7.12.5 and could get 7.14.5, but got 7.12.5",
  "Package \\"@babel/helper-module-transforms\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/helper-optimise-call-expression\\" wants ^7.10.4 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helper-plugin-utils\\" wants ^7.0.0 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helper-plugin-utils\\" wants ^7.10.4 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helper-plugin-utils\\" wants ^7.8.0 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helper-plugin-utils\\" wants ^7.8.3 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helper-plugin-utils\\" wants ^7.12.13 and could get 7.14.5, but got 7.13.0",
  "Package \\"@babel/helper-remap-async-to-generator\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/helper-replace-supers\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.5",
  "Package \\"@babel/helper-simple-access\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/helper-skip-transparent-expression-wrappers\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/helper-split-export-declaration\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-split-export-declaration\\" wants ^7.11.0 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-split-export-declaration\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-split-export-declaration\\" wants ^7.12.13 and could get 7.14.5, but got 7.12.13",
  "Package \\"@babel/helper-validator-identifier\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-validator-identifier\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-validator-option\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-validator-option\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/helper-wrap-function\\" wants ^7.10.4 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/helpers\\" wants ^7.12.5 and could get 7.14.6, but got 7.12.5",
  "Package \\"@babel/highlight\\" wants ^7.10.4 and could get 7.14.5, but got 7.10.4",
  "Package \\"@babel/highlight\\" wants ^7.12.13 and could get 7.14.5, but got 7.13.10",
  "Package \\"@babel/parser\\" wants ^7.1.0 and could get 7.14.6, but got 7.12.11",
  "Package \\"@babel/parser\\" wants ^7.1.6 and could get 7.14.6, but got 7.12.11",
  "Package \\"@babel/parser\\" wants ^7.12.10 and could get 7.14.6, but got 7.12.11",
  "Package \\"@babel/parser\\" wants ^7.12.11 and could get 7.14.6, but got 7.12.11",
  "Package \\"@babel/parser\\" wants ^7.12.7 and could get 7.14.6, but got 7.12.11",
  "Package \\"@babel/parser\\" wants ^7.3.3 and could get 7.14.6, but got 7.12.11",
  "Package \\"@babel/parser\\" wants ^7.12.13 and could get 7.14.6, but got 7.13.11",
  "Package \\"@babel/parser\\" wants ^7.13.0 and could get 7.14.6, but got 7.13.11",
  "Package \\"@babel/parser\\" wants ^7.7.2 and could get 7.14.6, but got 7.13.11",
  "Package \\"@babel/plugin-proposal-async-generator-functions\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-class-properties\\" wants ^7.1.0 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-class-properties\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-dynamic-import\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-export-namespace-from\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-json-strings\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-logical-assignment-operators\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-nullish-coalescing-operator\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-numeric-separator\\" wants ^7.12.7 and could get 7.14.5, but got 7.12.7",
  "Package \\"@babel/plugin-proposal-object-rest-spread\\" wants ^7.0.0 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-object-rest-spread\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-object-rest-spread\\" wants ^7.3.2 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-optional-catch-binding\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-optional-chaining\\" wants ^7.12.7 and could get 7.14.5, but got 7.12.7",
  "Package \\"@babel/plugin-proposal-private-methods\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-unicode-property-regex\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-proposal-unicode-property-regex\\" wants ^7.4.4 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-syntax-class-properties\\" wants ^7.12.1 and could get 7.12.13, but got 7.12.1",
  "Package \\"@babel/plugin-syntax-class-properties\\" wants ^7.8.3 and could get 7.12.13, but got 7.12.1",
  "Package \\"@babel/plugin-syntax-jsx\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-syntax-jsx\\" wants ^7.2.0 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-syntax-top-level-await\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-syntax-top-level-await\\" wants ^7.8.3 and could get 7.14.5, but got 7.12.13",
  "Package \\"@babel/plugin-syntax-typescript\\" wants ^7.12.1 and could get 7.12.13, but got 7.12.1",
  "Package \\"@babel/plugin-transform-arrow-functions\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-async-to-generator\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-block-scoped-functions\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-block-scoping\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/plugin-transform-classes\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-computed-properties\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-destructuring\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-dotall-regex\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-dotall-regex\\" wants ^7.4.4 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-duplicate-keys\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-exponentiation-operator\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-for-of\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-function-name\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-literals\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-member-expression-literals\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-modules-amd\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-modules-commonjs\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-modules-systemjs\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-modules-umd\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-named-capturing-groups-regex\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-new-target\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-object-super\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-parameters\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-property-literals\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-react-display-name\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-react-jsx-development\\" wants ^7.12.7 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/plugin-transform-react-jsx\\" wants ^7.12.10 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/plugin-transform-react-jsx\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/plugin-transform-react-jsx\\" wants ^7.12.12 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/plugin-transform-react-pure-annotations\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-regenerator\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-reserved-words\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-shorthand-properties\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-spread\\" wants ^7.12.1 and could get 7.14.6, but got 7.12.1",
  "Package \\"@babel/plugin-transform-sticky-regex\\" wants ^7.12.7 and could get 7.14.5, but got 7.12.7",
  "Package \\"@babel/plugin-transform-template-literals\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-typeof-symbol\\" wants ^7.12.10 and could get 7.14.5, but got 7.12.10",
  "Package \\"@babel/plugin-transform-unicode-escapes\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/plugin-transform-unicode-regex\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.1",
  "Package \\"@babel/preset-env\\" wants ^7.1.6 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/preset-env\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.11",
  "Package \\"@babel/preset-modules\\" wants ^0.1.3 and could get 0.1.4, but got 0.1.3",
  "Package \\"@babel/preset-react\\" wants ^7.12.10 and could get 7.14.5, but got 7.12.10",
  "Package \\"@babel/runtime\\" wants ^7.12.5 and could get 7.14.0, but got 7.12.5",
  "Package \\"@babel/runtime\\" wants ^7.8.4 and could get 7.14.0, but got 7.12.5",
  "Package \\"@babel/runtime\\" wants ^7.10.2 and could get 7.14.0, but got 7.12.13",
  "Package \\"@babel/template\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.7",
  "Package \\"@babel/template\\" wants ^7.12.7 and could get 7.14.5, but got 7.12.7",
  "Package \\"@babel/template\\" wants ^7.3.3 and could get 7.14.5, but got 7.12.7",
  "Package \\"@babel/template\\" wants ^7.12.13 and could get 7.14.5, but got 7.12.13",
  "Package \\"@babel/traverse\\" wants ^7.1.0 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/traverse\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/traverse\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/traverse\\" wants ^7.12.10 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/traverse\\" wants ^7.12.5 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/traverse\\" wants ^7.4.5 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/traverse\\" wants ^7.7.2 and could get 7.14.5, but got 7.13.0",
  "Package \\"@babel/types\\" wants ^7.0.0 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.10.4 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.10.5 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.12.1 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.12.10 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.12.11 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.12.12 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.12.5 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.12.7 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.3.0 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.3.3 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.4.4 and could get 7.14.5, but got 7.12.12",
  "Package \\"@babel/types\\" wants ^7.12.13 and could get 7.14.5, but got 7.13.0",
  "Package \\"@babel/types\\" wants ^7.13.0 and could get 7.14.5, but got 7.13.0",
  "Package \\"@jest/transform\\" wants ^27.0.0-next.5 and could get 27.0.0-next.8, but got 27.0.0-next.5",
  "Package \\"@jest/types\\" wants ^26.0.1 and could get 26.6.2, but got 26.0.1",
  "Package \\"@jest/types\\" wants ^27.0.0-next.3 and could get 27.0.0-next.8, but got 27.0.0-next.3",
  "Package \\"@types/babel__core\\" wants ^7.0.0 and could get 7.1.14, but got 7.1.12",
  "Package \\"@types/babel__core\\" wants ^7.1.7 and could get 7.1.14, but got 7.1.12",
  "Package \\"@types/babel__traverse\\" wants * and could get 7.11.1, but got 7.11.0",
  "Package \\"@types/babel__traverse\\" wants ^7.0.6 and could get 7.11.1, but got 7.11.0",
  "Package \\"@types/estree\\" wants * and could get 0.0.46, but got 0.0.45",
  "Package \\"@types/istanbul-lib-coverage\\" wants * and could get 2.0.3, but got 2.0.1",
  "Package \\"@types/istanbul-lib-coverage\\" wants ^2.0.0 and could get 2.0.3, but got 2.0.1",
  "Package \\"@types/json-schema\\" wants ^7.0.3 and could get 7.0.7, but got 7.0.6",
  "Package \\"@types/json-schema\\" wants ^7.0.5 and could get 7.0.7, but got 7.0.6",
  "Package \\"@types/json-schema\\" wants ^7.0.6 and could get 7.0.7, but got 7.0.6",
  "Package \\"abab\\" wants ^2.0.3 and could get 2.0.5, but got 2.0.3",
  "Package \\"acorn\\" wants ^7.1.1 and could get 7.4.1, but got 7.1.1",
  "Package \\"acorn\\" wants ^8.0.4 and could get 8.4.0, but got 8.0.4",
  "Package \\"acorn\\" wants ^8.0.5 and could get 8.4.0, but got 8.1.0",
  "Package \\"array-includes\\" wants ^3.1.1 and could get 3.1.3, but got 3.1.1",
  "Package \\"chokidar\\" wants ^3.4.1 and could get 3.5.1, but got 3.4.3",
  "Package \\"colorette\\" wants ^1.2.1 and could get 1.2.2, but got 1.2.1",
  "Package \\"core-js-compat\\" wants ^3.8.0 and could get 3.14.0, but got 3.8.1",
  "Package \\"debug\\" wants 4 and could get 4.3.1, but got 4.1.1",
  "Package \\"debug\\" wants ^4.0.1 and could get 4.3.1, but got 4.1.1",
  "Package \\"debug\\" wants ^4.1.0 and could get 4.3.1, but got 4.1.1",
  "Package \\"debug\\" wants ^4.1.1 and could get 4.3.1, but got 4.1.1",
  "Package \\"debug\\" wants ^3.0.0 and could get 3.2.7, but got 3.2.6",
  "Package \\"debug\\" wants ^3.1.0 and could get 3.2.7, but got 3.2.6",
  "Package \\"dom-serializer\\" wants ^1.0.1 and could get 1.3.1, but got 1.1.0",
  "Package \\"domelementtype\\" wants ^2.0.1 and could get 2.2.0, but got 2.0.1",
  "Package \\"domutils\\" wants ^2.4.2 and could get 2.6.0, but got 2.4.2",
  "Package \\"dot-prop\\" wants ^5.0.0 and could get 5.3.0, but got 5.2.0",
  "Package \\"encoding\\" wants ^0.1.11 and could get 0.1.13, but got 0.1.12",
  "Package \\"es-abstract\\" wants ^1.17.0 and could get 1.18.0, but got 1.17.0",
  "Package \\"es-abstract\\" wants ^1.17.0-next.1 and could get 1.18.0, but got 1.17.0",
  "Package \\"es-abstract\\" wants ^1.18.0-next.1 and could get 1.18.0, but got 1.18.0-next.1",
  "Package \\"eslint-scope\\" wants ^5.0.0 and could get 5.1.1, but got 5.0.0",
  "Package \\"eslint-utils\\" wants ^2.0.0 and could get 2.1.0, but got 2.0.0",
  "Package \\"eslint-visitor-keys\\" wants ^1.1.0 and could get 1.3.0, but got 1.1.0",
  "Package \\"eslint-visitor-keys\\" wants ^2.0.0 and could get 2.1.0, but got 2.0.0",
  "Package \\"esrecurse\\" wants ^4.1.0 and could get 4.3.0, but got 4.2.1",
  "Package \\"events\\" wants ^3.0.0 and could get 3.3.0, but got 3.0.0",
  "Package \\"fsevents\\" wants ~2.3.1 and could get 2.3.2, but got 2.3.1",
  "Package \\"gensync\\" wants ^1.0.0-beta.1 and could get 1.0.0-beta.2, but got 1.0.0-beta.1",
  "Package \\"get-intrinsic\\" wants ^1.0.2 and could get 1.1.1, but got 1.0.2",
  "Package \\"globby\\" wants ^11.0.2 and could get 11.0.3, but got 11.0.2",
  "Package \\"graceful-fs\\" wants ^4.1.11 and could get 4.2.6, but got 4.2.4",
  "Package \\"graceful-fs\\" wants ^4.1.15 and could get 4.2.6, but got 4.2.4",
  "Package \\"graceful-fs\\" wants ^4.1.2 and could get 4.2.6, but got 4.2.4",
  "Package \\"graceful-fs\\" wants ^4.1.6 and could get 4.2.6, but got 4.2.4",
  "Package \\"graceful-fs\\" wants ^4.2.0 and could get 4.2.6, but got 4.2.4",
  "Package \\"graceful-fs\\" wants ^4.2.3 and could get 4.2.6, but got 4.2.4",
  "Package \\"graceful-fs\\" wants ^4.2.4 and could get 4.2.6, but got 4.2.4",
  "Package \\"has-symbols\\" wants ^1.0.0 and could get 1.0.2, but got 1.0.1",
  "Package \\"has-symbols\\" wants ^1.0.1 and could get 1.0.2, but got 1.0.1",
  "Package \\"http-cache-semantics\\" wants ^4.0.0 and could get 4.1.0, but got 4.0.3",
  "Package \\"ignore-walk\\" wants ^3.0.3 and could get 3.0.4, but got 3.0.3",
  "Package \\"ini\\" wants ^1.3.2 and could get 1.3.8, but got 1.3.5",
  "Package \\"ini\\" wants ^1.3.4 and could get 1.3.8, but got 1.3.5",
  "Package \\"ini\\" wants ~1.3.0 and could get 1.3.8, but got 1.3.5",
  "Package \\"is-callable\\" wants ^1.1.4 and could get 1.2.3, but got 1.1.5",
  "Package \\"is-callable\\" wants ^1.1.5 and could get 1.2.3, but got 1.1.5",
  "Package \\"is-callable\\" wants ^1.2.2 and could get 1.2.3, but got 1.2.2",
  "Package \\"is-regex\\" wants ^1.0.5 and could get 1.1.2, but got 1.0.5",
  "Package \\"is-regex\\" wants ^1.1.1 and could get 1.1.2, but got 1.1.1",
  "Package \\"jest-haste-map\\" wants ^27.0.0-next.5 and could get 27.0.0-next.8, but got 27.0.0-next.5",
  "Package \\"jest-util\\" wants ^27.0.0-next.3 and could get 27.0.0-next.8, but got 27.0.0-next.3",
  "Package \\"jest-worker\\" wants ^27.0.0-next.5 and could get 27.0.0-next.8, but got 27.0.0-next.5",
  "Package \\"js-yaml\\" wants ^3.11.0 and could get 3.14.1, but got 3.13.1",
  "Package \\"js-yaml\\" wants ^3.13.1 and could get 3.14.1, but got 3.13.1",
  "Package \\"js-yaml\\" wants ^3.4.3 and could get 3.14.1, but got 3.13.1",
  "Package \\"json5\\" wants ^2.1.2 and could get 2.2.0, but got 2.1.3",
  "Package \\"lodash\\" wants ^4.0.0 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.17.11 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.17.13 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.17.14 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.17.15 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.17.19 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.17.20 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.17.4 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.17.5 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ^4.3.0 and could get 4.17.21, but got 4.17.20",
  "Package \\"lodash\\" wants ~4.17.10 and could get 4.17.21, but got 4.17.20",
  "Package \\"micromatch\\" wants ^4.0.2 and could get 4.0.4, but got 4.0.2",
  "Package \\"mime-db\\" wants >= 1.43.0 < 2 and could get 1.47.0, but got 1.43.0",
  "Package \\"mime-types\\" wants ^2.1.12 and could get 2.1.30, but got 2.1.26",
  "Package \\"mime-types\\" wants ~2.1.19 and could get 2.1.30, but got 2.1.26",
  "Package \\"mime-types\\" wants ~2.1.24 and could get 2.1.30, but got 2.1.26",
  "Package \\"minipass-pipeline\\" wants ^1.2.2 and could get 1.2.4, but got 1.2.2",
  "Package \\"minipass\\" wants ^3.0.0 and could get 3.1.3, but got 3.1.1",
  "Package \\"minipass\\" wants ^3.1.1 and could get 3.1.3, but got 3.1.1",
  "Package \\"minizlib\\" wants ^2.1.0 and could get 2.1.2, but got 2.1.0",
  "Package \\"nanoid\\" wants ^3.1.20 and could get 3.1.23, but got 3.1.20",
  "Package \\"nanoid\\" wants ^3.1.22 and could get 3.1.23, but got 3.1.22",
  "Package \\"npm-bundled\\" wants ^1.1.1 and could get 1.1.2, but got 1.1.1",
  "Package \\"object-inspect\\" wants ^1.7.0 and could get 1.9.0, but got 1.7.0",
  "Package \\"object.assign\\" wants ^4.1.0 and could get 4.1.2, but got 4.1.0",
  "Package \\"object.entries\\" wants ^1.1.0 and could get 1.1.3, but got 1.1.1",
  "Package \\"object.values\\" wants ^1.1.0 and could get 1.1.3, but got 1.1.1",
  "Package \\"object.values\\" wants ^1.1.1 and could get 1.1.3, but got 1.1.1",
  "Package \\"onetime\\" wants ^5.1.0 and could get 5.1.2, but got 5.1.0",
  "Package \\"picomatch\\" wants ^2.0.4 and could get 2.2.3, but got 2.2.2",
  "Package \\"picomatch\\" wants ^2.0.5 and could get 2.2.3, but got 2.2.2",
  "Package \\"picomatch\\" wants ^2.2.1 and could get 2.2.3, but got 2.2.2",
  "Package \\"picomatch\\" wants ^2.2.2 and could get 2.2.3, but got 2.2.2",
  "Package \\"postcss\\" wants ^8.2.1 and could get 8.2.15, but got 8.2.1",
  "Package \\"postcss\\" wants ^8.2.7 and could get 8.2.15, but got 8.2.10",
  "Package \\"pretty-format\\" wants ^26.0.1 and could get 26.6.2, but got 26.0.1",
  "Package \\"psl\\" wants ^1.1.28 and could get 1.8.0, but got 1.7.0",
  "Package \\"react-is\\" wants ^17.0.1 and could get 17.0.2, but got 17.0.1",
  "Package \\"regexpp\\" wants ^3.0.0 and could get 3.1.0, but got 3.0.0",
  "Package \\"resolve\\" wants ^1.1.6 and could get 1.20.0, but got 1.19.0",
  "Package \\"resolve\\" wants ^1.10.0 and could get 1.20.0, but got 1.19.0",
  "Package \\"resolve\\" wants ^1.13.1 and could get 1.20.0, but got 1.19.0",
  "Package \\"resolve\\" wants ^1.17.0 and could get 1.20.0, but got 1.19.0",
  "Package \\"resolve\\" wants ^1.19.0 and could get 1.20.0, but got 1.19.0",
  "Package \\"semver\\" wants ^7.0.0 and could get 7.3.5, but got 7.3.4",
  "Package \\"semver\\" wants ^7.1.1 and could get 7.3.5, but got 7.3.4",
  "Package \\"semver\\" wants ^7.1.3 and could get 7.3.5, but got 7.3.4",
  "Package \\"semver\\" wants ^7.3.2 and could get 7.3.5, but got 7.3.4",
  "Package \\"semver\\" wants ^7.3.4 and could get 7.3.5, but got 7.3.4",
  "Package \\"signal-exit\\" wants ^3.0.0 and could get 3.0.3, but got 3.0.2",
  "Package \\"signal-exit\\" wants ^3.0.2 and could get 3.0.3, but got 3.0.2",
  "Package \\"ssri\\" wants ^8.0.0 and could get 8.0.1, but got 8.0.0",
  "Package \\"string-width\\" wants ^4.1.0 and could get 4.2.2, but got 4.2.0",
  "Package \\"string-width\\" wants ^4.2.0 and could get 4.2.2, but got 4.2.0",
  "Package \\"string.prototype.trimend\\" wants ^1.0.1 and could get 1.0.4, but got 1.0.3",
  "Package \\"string.prototype.trimstart\\" wants ^1.0.1 and could get 1.0.4, but got 1.0.3",
  "Package \\"tar\\" wants ^6.0.2 and could get 6.1.0, but got 6.0.2",
  "Package \\"terser\\" wants ^5.0.0 and could get 5.6.1, but got 5.5.1",
  "Package \\"timers-browserify\\" wants ^2.0.4 and could get 2.0.12, but got 2.0.11",
  "Package \\"tslib\\" wants ^2.0.3 and could get 2.2.0, but got 2.0.3",
  "Package \\"typescript\\" wants ^4.1.3 and could get 4.3.4, but got 4.1.3",
  "Package \\"util\\" wants >=0.10.3 <1 and could get 0.12.3, but got 0.12.1",
  "Package \\"whatwg-url\\" wants ^8.0.0 and could get 8.4.0, but got 8.1.0",
  "Package \\"write-file-atomic\\" wants ^3.0.0 and could get 3.0.3, but got 3.0.1",
  "Package \\"ws\\" wants ^7.3.1 and could get 7.4.4, but got 7.4.1",
]
`;

exports[`yarnlock-dedupe v1 yarn.lock fixDuplicates 1`] = `1`;

exports[`yarnlock-dedupe v1 yarn.lock listDuplicates 1`] = `
Array [
  "Package \\"@scope/lib\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
  "Package \\"lodash\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
]
`;

exports[`yarnlock-dedupe v2 456.lock fixDuplicates 1`] = `2`;

exports[`yarnlock-dedupe v2 456.lock listDuplicates 1`] = `
Array [
  "Package \\"@bluelovers/tsconfig\\" wants ^1.0.19 and could get 1.0.20, but got 1.0.19",
]
`;

exports[`yarnlock-dedupe v2 yarn.lock fixDuplicates 1`] = `2`;

exports[`yarnlock-dedupe v2 yarn.lock listDuplicates 1`] = `
Array [
  "Package \\"lodash\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
]
`;
